src/test/kalang-snippets/error/LambdaInitError.kls
lambda type is not specified@1
val cb = () => {
    println("test");
};